--- a/en/products/1.html
+++ b/en/products/1.html
@@ -19,8 +19,8 @@
     <link rel="icon" href="/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="/icon.png">
 
-    <link rel="stylesheet" href="css/application-7218155b.css" data-turbo-track="reload">
-<link rel="stylesheet" href="css/tailwind-b8592a05.css" data-turbo-track="reload">
+    <link rel="stylesheet" href="../css/application-7218155b.css" data-turbo-track="reload">
+<link rel="stylesheet" href="../css/tailwind-b8592a05.css" data-turbo-track="reload">
     
 
 
@@ -160,8 +160,8 @@
   </div>
 
   <div class="flex items-center gap-1 bg-gray-50 p-0.5 rounded-md border border-gray-200">
-    <a class="lang-btn text-xs font-normal py-1 px-2.5 rounded border-none cursor-pointer transition-all bg-transparent text-gray-500" href="../ka/index.html">ქართ</a>
-    <a class="lang-btn text-xs font-normal py-1 px-2.5 rounded border-none cursor-pointer transition-all active" href="../en/index.html">ENG</a>
+    <a class="lang-btn text-xs font-normal py-1 px-2.5 rounded border-none cursor-pointer transition-all bg-transparent text-gray-500" href="../../ka/index.html">ქართ</a>
+    <a class="lang-btn text-xs font-normal py-1 px-2.5 rounded border-none cursor-pointer transition-all active" href="../../en/index.html">ENG</a>
   </div>
 
 
@@ -183,10 +183,10 @@
           <svg class="ml-2 h-4 w-4 md:block" fill="none" stroke="currentColor" stroke-width="2" viewbox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7"></path></svg>
         </div>
         <div class="menu-popup md:absolute md:left-0 md:z-20 md:mt-0 md:w-80 w-full md:bg-white md:shadow-lg md:border md:border-gray-100 md:border-t-2 md:border-t-gray-100 p-2 max-h-80 overflow-y-auto grid grid-cols-1 transition-all duration-200 ease-in-out" style="min-width: 0; border-radius: 0;">
-            <a href="categories/1.html" class="flex items-center py-2 px-3 text-[0.95rem] text-gray-700 rounded-md hover:text-[#6b8e6b] hover:bg-gray-50 transition-all no-underline">
+            <a href="../categories/1.html" class="flex items-center py-2 px-3 text-[0.95rem] text-gray-700 rounded-md hover:text-[#6b8e6b] hover:bg-gray-50 transition-all no-underline">
               <span>ჰიდროფილური ზეთები &amp; ბალმები </span>
             </a>
-            <a href="categories/2.html" class="flex items-center py-2 px-3 text-[0.95rem] text-gray-700 rounded-md hover:text-[#6b8e6b] hover:bg-gray-50 transition-all no-underline">
+            <a href="../categories/2.html" class="flex items-center py-2 px-3 text-[0.95rem] text-gray-700 rounded-md hover:text-[#6b8e6b] hover:bg-gray-50 transition-all no-underline">
               <span>მზისგან დამცავები</span>
             </a>
         </div>
@@ -199,7 +199,7 @@
           <svg class="ml-2 h-4 w-4 md:block" fill="none" stroke="currentColor" stroke-width="2" viewbox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7"></path></svg>
         </div>
         <div class="menu-popup md:absolute md:left-0 md:z-20 md:mt-0 md:w-80 w-full md:bg-white md:shadow-lg md:border md:border-gray-100 md:border-t-2 md:border-t-gray-100 p-2 max-h-80 overflow-y-auto grid grid-cols-1 transition-all duration-200 ease-in-out" style="min-width: 0; border-radius: 0;">
-            <a href="brands/1.html" class="flex items-center py-2 px-3 text-[0.95rem] text-gray-700 rounded-md hover:text-[#6b8e6b] hover:bg-gray-50 transition-all no-underline">
+            <a href="../brands/1.html" class="flex items-center py-2 px-3 text-[0.95rem] text-gray-700 rounded-md hover:text-[#6b8e6b] hover:bg-gray-50 transition-all no-underline">
               <span>Brand</span>
             </a>
         </div>
@@ -215,14 +215,8 @@
 <!-- END app/views/main/_menu.html.erb -->
           </nav>
 
-          <main><!-- BEGIN app/views/main/products.html.erb
--->  
-  <section class="mb-20" id="category-1">
-    <h2 class="category-title text-3xl md:text-4xl font-normal text-gray-900 mb-12 text-center relative pb-4">
-      ჰიდროფილური ზეთები &amp; ბალმები 
-    </h2>
-    <div>
-      <!-- BEGIN app/views/main/_product.html.erb
+          <main><!-- BEGIN app/views/products/show.html.erb
+--><!-- BEGIN app/views/main/_product.html.erb
 -->
 <div class="mb-10 p-4 md:p-8 bg-white rounded-2xl shadow border border-gray-100 transition-all hover:shadow-lg">
   <div class="mb-2 -mt-2 md:mb-4 md:-mt-4 flex items-center justify-between">
@@ -230,19 +224,19 @@
   </div>
   <div class="flex flex-col md:flex-row gap-6 md:gap-10 items-stretch">
     <div class="relative w-full md:w-80 shrink-0 rounded-xl overflow-hidden bg-gray-50 flex items-center justify-center" style="min-height: 400px; max-height: 400px;">
-        <img class="w-full h-auto max-h-72 md:max-h-80 object-contain block rounded-xl export-data transition-transform duration-200 hover:scale-105" data-record-type="Product" data-record-id="1" src="images/Product_1_0_94588f0c9868c654d2acb2fe55c08b61.png">
+        <img class="w-full h-auto max-h-72 md:max-h-80 object-contain block rounded-xl export-data transition-transform duration-200 hover:scale-105" data-record-type="Product" data-record-id="1" src="../images/Product_1_0_94588f0c9868c654d2acb2fe55c08b61.png">
 
     </div>
 
     <div class="flex flex-col flex-grow w-full justify-between">
 
       <h2 class="text-xl md:text-2xl font-semibold text-[#6b8e6b] mb-4 leading-snug tracking-tight">
-        <a class="hover:underline text-[#6b8e6b]" href="products/1.html">Dr.Althea Pore Refresh Grinding Cleansing Balm</a>
+        <a class="hover:underline text-[#6b8e6b]" href="../products/1.html">Dr.Althea Pore Refresh Grinding Cleansing Balm</a>
       </h2>
 
         <div class="mb-2 mt-2 text-sm">
           <span class="font-bold text-gray-600">Brand:</span>
-          <a class="hover:underline text-[#6b8e6b] font-semibold" href="brands/1.html">ბრენდი</a>
+          <a class="hover:underline text-[#6b8e6b] font-semibold" href="../brands/1.html">ბრენდი</a>
         </div>
 
 
@@ -299,56 +293,7 @@
 </div>
 
 <!-- END app/views/main/_product.html.erb -->
-      <!-- BEGIN app/views/main/_product.html.erb
--->
-<div class="mb-10 p-4 md:p-8 bg-white rounded-2xl shadow border border-gray-100 transition-all hover:shadow-lg">
-  <div class="mb-2 -mt-2 md:mb-4 md:-mt-4 flex items-center justify-between">
-    <span class="text-xs text-gray-400 select-all bg-white/80 px-2 py-0.5 rounded" title="ID продукта для поддержки">[ 000002 ]</span>
-  </div>
-  <div class="flex flex-col md:flex-row gap-6 md:gap-10 items-stretch">
-    <div class="relative w-full md:w-80 shrink-0 rounded-xl overflow-hidden bg-gray-50 flex items-center justify-center" style="min-height: 400px; max-height: 400px;">
-        <img class="w-full h-auto max-h-72 md:max-h-80 object-contain block rounded-xl export-data transition-transform duration-200 hover:scale-105" data-record-type="Product" data-record-id="2" src="images/Product_2_0_cb079ddb3bb2cade0f047abdc3039f39.png">
-
-    </div>
-
-    <div class="flex flex-col flex-grow w-full justify-between">
-
-      <h2 class="text-xl md:text-2xl font-semibold text-[#6b8e6b] mb-4 leading-snug tracking-tight">
-        <a class="hover:underline text-[#6b8e6b]" href="products/2.html">ROUND LAB 1025 Dokdo Lotion</a>
-      </h2>
-
-        <div class="mb-2 mt-2 text-sm">
-          <span class="font-bold text-gray-600">Brand:</span>
-          <a class="hover:underline text-[#6b8e6b] font-semibold" href="brands/1.html">ბრენდი</a>
-        </div>
-
-
-
-        <div class="mb-1 mt-2 text-sm">
-          <span class="font-bold text-gray-600">Description:</span>
-        </div>
-        <div class="prose prose-sm max-w-none mb-4 text-[0.97rem] text-gray-600 leading-relaxed">
-          <ul>
-<li>ინტენსიურად ატენიანებს კანს,<br>უმოკლეს დროში უმკლავდება<br>სიმშრალეს და აქერცვლას</li>
-<li>აძლიერებს კანის ბუნებრივ დამცავ<br>ბარიერს, ხელს უშლის ტენის<br>დაკარგვას და იცავს ნეგატიური<br>ზემოქმედებისგან</li>
-<li>ამშვიდებს კანს, ამცირებს<br>გაღიზიანებას და სიწითლეს</li>
-<li>აქვს მსუბუქი ტექსტურა, რომელიც<br>სწრაფად შეიწოვება წებოვნების ან<br>ცხიმიანობის შეგრძნების გარეშე</li>
-<li>მოუხდება ყველა ტიპის კანს, მათ<br>შორის მგრძნობიარესაც</li>
-</ul>
-<div><br></div>
-<div>მთავარი აქტიური ინგრედიენტები:</div>
-<div>ღრმა ზღვის წყალი, 3 სახის<br>ჰიალურონის მჟავის კომპლექსი,<br>მაკადამიის ზეთი, პანთენოლი, შაქრის<br>ლერწმის ექსტრაქტი, სკვალანი</div>
-        </div>
-
-    </div>
-  </div>
-
-</div>
-
-<!-- END app/views/main/_product.html.erb -->
-    </div>
-  </section>
-<!-- END app/views/main/products.html.erb --></main>
+<!-- END app/views/products/show.html.erb --></main>
           <!-- BEGIN app/views/main/_footer.html.erb
 --><footer class="w-full text-center py-6 text-xs text-gray-400 mt-12">
   © 2026 KBeautyGeo — v1.0.0
