Update for version: 20260120195526

--- a/en/ingredients/1.html
+++ b/en/ingredients/1.html
@@ -239,7 +239,7 @@
 -->  
   <section class="mb-20" id="category-1">
     <h2 class="category-title text-3xl md:text-4xl font-normal text-gray-900 mb-12 text-center relative pb-4">
-      Dr.Althea
+      abc
     </h2>
     <div>
       <!-- BEGIN app/views/main/_product.html.erb
