--- a/ka/ingredients/1.html
+++ b/ka/ingredients/1.html
@@ -166,8 +166,8 @@
   </div>
 
   <div class="flex items-center gap-1 bg-gray-50 p-0.5 rounded-md border border-gray-200">
-    <a class="lang-btn lang-btn-ka text-xs font-normal py-1 px-2.5 rounded border-none cursor-pointer transition-all bg-transparent text-gray-500" href="../../ka/index.html">ქართ</a>
-    <a class="lang-btn lang-btn-en text-xs font-normal py-1 px-2.5 rounded border-none cursor-pointer transition-all active" href="../../en/index.html">ENG</a>
+    <a class="lang-btn lang-btn-ka text-xs font-normal py-1 px-2.5 rounded border-none cursor-pointer transition-all active" href="../../ka/index.html">ქართ</a>
+    <a class="lang-btn lang-btn-en text-xs font-normal py-1 px-2.5 rounded border-none cursor-pointer transition-all bg-transparent text-gray-500" href="../../en/index.html">ENG</a>
   </div>
 
 
@@ -239,7 +239,7 @@
 -->  
   <section class="mb-20" id="category-1">
     <h2 class="category-title text-3xl md:text-4xl font-normal text-gray-900 mb-12 text-center relative pb-4">
-      Dr.Althea
+      abc
     </h2>
     <div>
       <!-- BEGIN app/views/main/_product.html.erb
@@ -288,6 +288,7 @@
 <div>
 <br>მთავარი აქტიური ინგრედიენტები:</div>
 <div>გუაიაზულენი, მწვანე ჩაის ექსტრაქტი,<br>ალოე ვერას ექსტრაქტი, სოიოს ზეთი,<br>ჟოჟობას ზეთი, ტოკოფეროლი</div>
+<div><br></div>
         </div>
 
         <!-- Вариант 1: Яркий заголовок -->
