--- a/ka/brands.html
+++ b/ka/brands.html
@@ -146,35 +146,28 @@
             <a href="categories.html" class="text-xs font-bold text-gray-500 mb-2 hover:text-[#6b8e6b]">კატეგორიები</a>
             <ul>
                 <li class="mb-2"><a href="categories/1.html" class="text-gray-800 hover:text-[#6b8e6b] text-base no-underline">📦 ჰიდროფილური ზეთები &amp; ბალმები</a></li>
-                <li class="mb-2"><a href="categories/2.html" class="text-gray-800 hover:text-[#6b8e6b] text-base no-underline">📦 მზისგან დამცავები</a></li>
             </ul>
           </div>
           <div class="mb-4">
             <a href="brands.html" class="text-xs font-bold text-gray-500 mb-2 hover:text-[#6b8e6b]">ბრენდები</a>
             <ul>
-                <li class="mb-2"><a href="brands/1.html" class="text-gray-800 hover:text-[#6b8e6b] text-base no-underline">ბრენდი</a></li>
+                <li class="mb-2"><a href="brands/1.html" class="text-gray-800 hover:text-[#6b8e6b] text-base no-underline">Dr.Althea</a></li>
             </ul>
           </div>
           <div class="mb-4">
             <a href="ingredients.html" class="text-xs font-bold text-gray-500 mb-2 hover:text-[#6b8e6b]">ინგრედიენტები</a>
             <ul>
-                <li class="mb-2"><a href="ingredients/1.html" class="text-gray-800 hover:text-[#6b8e6b] text-base no-underline">კაკაოს კარაქი</a></li>
+                <li class="mb-2"><a href="ingredients/1.html" class="text-gray-800 hover:text-[#6b8e6b] text-base no-underline">abc</a></li>
             </ul>
           </div>
 
-          <div class="mb-4">
-            <span class="text-xs font-bold text-gray-500 mb-2">გვერდები</span>
-            <ul>
-                <li class="mb-2"><a href="pages/delivery_terms.html" class="text-gray-800 hover:text-[#6b8e6b] text-base no-underline">მიწოდების პირობები</a></li>
-            </ul>
-          </div>
       </nav>
     </div>
   </div>
 
   <div class="flex items-center gap-1 bg-gray-50 p-0.5 rounded-md border border-gray-200">
-    <a class="lang-btn text-xs font-normal py-1 px-2.5 rounded border-none cursor-pointer transition-all active" href="index.html">ქართ</a>
-    <a class="lang-btn text-xs font-normal py-1 px-2.5 rounded border-none cursor-pointer transition-all bg-transparent text-gray-500" href="index.html">ENG</a>
+    <a class="lang-btn lang-btn-ka text-xs font-normal py-1 px-2.5 rounded border-none cursor-pointer transition-all active" href="../ka/index.html">ქართ</a>
+    <a class="lang-btn lang-btn-en text-xs font-normal py-1 px-2.5 rounded border-none cursor-pointer transition-all bg-transparent text-gray-500" href="../en/index.html">ENG</a>
   </div>
 
 
@@ -201,9 +194,6 @@
             <a href="categories/1.html" class="flex items-center py-2 px-3 text-[0.95rem] text-gray-700 rounded-md hover:text-[#6b8e6b] hover:bg-gray-50 transition-all no-underline">
               <span>ჰიდროფილური ზეთები &amp; ბალმები</span>
             </a>
-            <a href="categories/2.html" class="flex items-center py-2 px-3 text-[0.95rem] text-gray-700 rounded-md hover:text-[#6b8e6b] hover:bg-gray-50 transition-all no-underline">
-              <span>მზისგან დამცავები</span>
-            </a>
         </div>
       </div>
 
@@ -217,7 +207,7 @@
         </div>
         <div class="menu-popup md:absolute md:left-0 md:z-20 md:mt-0 md:w-80 w-full md:bg-white md:shadow-lg md:border md:border-gray-100 md:border-t-2 md:border-t-gray-100 p-2 max-h-80 overflow-y-auto grid grid-cols-1 transition-all duration-200 ease-in-out" style="min-width: 0; border-radius: 0;">
             <a href="brands/1.html" class="flex items-center py-2 px-3 text-[0.95rem] text-gray-700 rounded-md hover:text-[#6b8e6b] hover:bg-gray-50 transition-all no-underline">
-              <span>ბრენდი</span>
+              <span>Dr.Althea</span>
             </a>
         </div>
       </div>
@@ -232,21 +222,13 @@
         </div>
         <div class="menu-popup md:absolute md:left-0 md:z-20 md:mt-0 md:w-80 w-full md:bg-white md:shadow-lg md:border md:border-gray-100 md:border-t-2 md:border-t-gray-100 p-2 max-h-80 overflow-y-auto grid grid-cols-1 transition-all duration-200 ease-in-out" style="min-width: 0; border-radius: 0;">
             <a href="ingredients/1.html" class="flex items-center py-2 px-3 text-[0.95rem] text-gray-700 rounded-md hover:text-[#6b8e6b] hover:bg-gray-50 transition-all no-underline">
-              <span>კაკაოს კარაქი</span>
+              <span>abc</span>
             </a>
         </div>
       </div>
 
 
     <!-- Pages List -->
-      <div class="w-full md:w-auto flex flex-row gap-2">
-          <a href="pages/delivery_terms.html" class="flex items-center py-2 px-4 text-lg font-medium text-gray-700 bg-transparent rounded-md hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-[#6b8e6b] transition-all">
-              <svg class="w-5 h-5 mr-2 text-red-500" fill="currentColor" viewbox="0 0 24 24">
-                <path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5A2.5 2.5 0 1 1 12 6a2.5 2.5 0 0 1 0 5.5z"></path>
-              </svg>
-            მიწოდების პირობები
-          </a>
-      </div>
 
   </div>
 </div>
@@ -257,7 +239,7 @@
 -->  
   <section class="mb-20" id="category-1">
     <h2 class="category-title text-3xl md:text-4xl font-normal text-gray-900 mb-12 text-center relative pb-4">
-      ბრენდი
+      Dr.Althea
     </h2>
     <div>
       <!-- BEGIN app/views/main/_product.html.erb
@@ -268,8 +250,9 @@
   </div>
   <div class="flex flex-col md:flex-row gap-6 md:gap-10 items-stretch">
     <div class="relative w-full md:w-80 shrink-0 rounded-xl overflow-hidden bg-gray-50 flex items-center justify-center" style="min-height: 400px; max-height: 400px;">
-        <img class="w-full h-auto max-h-72 md:max-h-80 object-contain block rounded-xl export-data transition-transform duration-200 hover:scale-105" data-record-type="Product" data-record-id="1" src="images/Product_1_0_94588f0c9868c654d2acb2fe55c08b61.png">
-
+        <div class="relative w-full md:w-80 shrink-0 rounded-xl overflow-hidden bg-gray-50 flex items-center justify-center" style="min-height: 400px; max-height: 400px;">
+          <span class="text-gray-300 text-lg">Нет фото</span>
+        </div>
     </div>
 
     <div class="flex flex-col flex-grow w-full justify-between">
@@ -280,9 +263,14 @@
 
         <div class="mb-2 mt-2 text-sm">
           <span class="font-bold text-gray-600">Brand:</span>
-          <a class="hover:underline text-[#6b8e6b] font-semibold" href="brands/1.html">ბრენდი</a>
+          <a class="hover:underline text-[#6b8e6b] font-semibold" href="brands/1.html">Dr.Althea</a>
         </div>
 
+        <div class="mb-2 mt-2 text-sm">
+          <span class="font-bold text-gray-600">Ingredients:</span>
+          <br>
+          <a class="hover:underline text-[#6b8e6b] font-semibold" href="ingredients/1.html">abc</a>
+        </div>
 
 
         <div class="mb-1 mt-2 text-sm">
@@ -297,8 +285,9 @@
 <li>აქვს მსუბუქი მატირების ეფექტი</li>
 <li>მოუხდება კომბინირებულ, ცხიმიან,<br>ფორების დახშობისკენ მიდრეკილ<br>კანს</li>
 </ul>
-<div><br></div>
-<div>მთავარი აქტიური ინგრედიენტები:<br>უაიაზულენი, მწვანე ჩაის ექსტრაქტი,<br>ალოე ვერას ექსტრაქტი, სოიოს ზეთი,<br>ჟოჟობას ზეთი, ტოკოფეროლი</div>
+<div>
+<br>მთავარი აქტიური ინგრედიენტები:</div>
+<div>გუაიაზულენი, მწვანე ჩაის ექსტრაქტი,<br>ალოე ვერას ექსტრაქტი, სოიოს ზეთი,<br>ჟოჟობას ზეთი, ტოკოფეროლი</div>
 <div><br></div>
         </div>
 
@@ -317,14 +306,9 @@
   </div>
   <div style="border-bottom: 0.5px solid #d1d5db; width: 100%; margin: 6px 0 6px 0;"></div>
   <div class="flex flex-col items-center justify-center flex-1 mt-0 mb-0 w-full" style="min-height: 40px;">
-      <div class="flex items-end justify-center gap-1 md:gap-2 w-full">
-        <span class="text-lg md:text-xl font-bold text-black leading-tight">
-          11.4 ₾
-        </span>
-          <span class="text-sm md:text-base font-medium text-gray-400 line-through">
-            12.3 ₾
-          </span>
-      </div>
+      <span class="text-lg md:text-xl font-bold text-black leading-tight" style="margin-bottom: 2px; display: flex; align-items: center; justify-content: center; height: 40px;">
+        60.0 ₾
+      </span>
   </div>
 </div>
 <!-- END app/views/main/_product_variant.html.erb -->
@@ -337,59 +321,12 @@
 </div>
 
 <!-- END app/views/main/_product.html.erb -->
-      <!-- BEGIN app/views/main/_product.html.erb
--->
-<div class="mb-10 p-4 md:p-8 bg-white rounded-2xl shadow border border-gray-100 transition-all hover:shadow-lg">
-  <div class="mb-2 -mt-2 md:mb-4 md:-mt-4 flex items-center justify-between">
-    <span class="text-xs text-gray-400 select-all bg-white/80 px-2 py-0.5 rounded" title="ID продукта для поддержки">[ 000002 ]</span>
-  </div>
-  <div class="flex flex-col md:flex-row gap-6 md:gap-10 items-stretch">
-    <div class="relative w-full md:w-80 shrink-0 rounded-xl overflow-hidden bg-gray-50 flex items-center justify-center" style="min-height: 400px; max-height: 400px;">
-        <img class="w-full h-auto max-h-72 md:max-h-80 object-contain block rounded-xl export-data transition-transform duration-200 hover:scale-105" data-record-type="Product" data-record-id="2" src="images/Product_2_0_cb079ddb3bb2cade0f047abdc3039f39.png">
-
-    </div>
-
-    <div class="flex flex-col flex-grow w-full justify-between">
-
-      <h2 class="text-xl md:text-2xl font-semibold text-[#6b8e6b] mb-4 leading-snug tracking-tight">
-        <a class="hover:underline text-[#6b8e6b]" href="products/2.html">ROUND LAB 1025 Dokdo Lotion</a>
-      </h2>
-
-        <div class="mb-2 mt-2 text-sm">
-          <span class="font-bold text-gray-600">Brand:</span>
-          <a class="hover:underline text-[#6b8e6b] font-semibold" href="brands/1.html">ბრენდი</a>
-        </div>
-
-
-
-        <div class="mb-1 mt-2 text-sm">
-          <span class="font-bold text-gray-600">Description:</span>
-        </div>
-        <div class="prose prose-sm max-w-none mb-4 text-[0.97rem] text-gray-600 leading-relaxed">
-          <ul>
-<li>ინტენსიურად ატენიანებს კანს,<br>უმოკლეს დროში უმკლავდება<br>სიმშრალეს და აქერცვლას</li>
-<li>აძლიერებს კანის ბუნებრივ დამცავ<br>ბარიერს, ხელს უშლის ტენის<br>დაკარგვას და იცავს ნეგატიური<br>ზემოქმედებისგან</li>
-<li>ამშვიდებს კანს, ამცირებს<br>გაღიზიანებას და სიწითლეს</li>
-<li>აქვს მსუბუქი ტექსტურა, რომელიც<br>სწრაფად შეიწოვება წებოვნების ან<br>ცხიმიანობის შეგრძნების გარეშე</li>
-<li>მოუხდება ყველა ტიპის კანს, მათ<br>შორის მგრძნობიარესაც</li>
-</ul>
-<div><br></div>
-<div>მთავარი აქტიური ინგრედიენტები:</div>
-<div>ღრმა ზღვის წყალი, 3 სახის<br>ჰიალურონის მჟავის კომპლექსი,<br>მაკადამიის ზეთი, პანთენოლი, შაქრის<br>ლერწმის ექსტრაქტი, სკვალანი</div>
-        </div>
-
-    </div>
-  </div>
-
-</div>
-
-<!-- END app/views/main/_product.html.erb -->
     </div>
   </section>
 <!-- END app/views/main/products.html.erb --></main>
           <!-- BEGIN app/views/main/_footer.html.erb
 --><footer class="w-full text-center py-6 text-xs text-gray-400 mt-12">
-  © 2026 KBeautyGeo — v1.0.0
+  © 2026 KBeautyGeo — v0
 </footer>
 <!-- END app/views/main/_footer.html.erb -->
         </div>
