Update for version: 20260120201158

--- a/en/ingredients/4.html
+++ b/en/ingredients/4.html
@@ -255,8 +255,14 @@
 <!-- END app/views/main/_menu.html.erb -->
           </nav>
 
-          <main><!-- BEGIN app/views/products/show.html.erb
---><!-- BEGIN app/views/main/_product.html.erb
+          <main><!-- BEGIN app/views/main/products.html.erb
+-->  
+  <section class="mb-20" id="category-4">
+    <h2 class="category-title text-3xl md:text-4xl font-normal text-gray-900 mb-12 text-center relative pb-4">
+      Mild plant surfactants.
+    </h2>
+    <div>
+      <!-- BEGIN app/views/main/_product.html.erb
 -->
 <div class="mb-10 p-4 md:p-8 bg-white rounded-2xl shadow border border-gray-100 transition-all hover:shadow-lg">
   <div class="mb-2 -mt-2 md:mb-4 md:-mt-4 flex items-center justify-between">
@@ -344,7 +350,9 @@
 </div>
 
 <!-- END app/views/main/_product.html.erb -->
-<!-- END app/views/products/show.html.erb --></main>
+    </div>
+  </section>
+<!-- END app/views/main/products.html.erb --></main>
           <!-- BEGIN app/views/main/_footer.html.erb
 --><footer class="w-full text-center py-6 text-xs text-gray-400 mt-12">
   © 2026 KBeautyGeo — v20260120195526
