--- a/ka/categories.html
+++ b/ka/categories.html
@@ -146,18 +146,23 @@
             <a href="categories.html" class="text-xs font-bold text-gray-500 mb-2 hover:text-[#6b8e6b]">კატეგორიები</a>
             <ul>
                 <li class="mb-2"><a href="categories/1.html" class="text-gray-800 hover:text-[#6b8e6b] text-base no-underline">📦 ჰიდროფილური ზეთები &amp; ბალმები</a></li>
+                <li class="mb-2"><a href="categories/2.html" class="text-gray-800 hover:text-[#6b8e6b] text-base no-underline">📦 სახის დასაბანები &amp; ენზიმური პუდრები</a></li>
             </ul>
           </div>
           <div class="mb-4">
             <a href="brands.html" class="text-xs font-bold text-gray-500 mb-2 hover:text-[#6b8e6b]">ბრენდები</a>
             <ul>
                 <li class="mb-2"><a href="brands/1.html" class="text-gray-800 hover:text-[#6b8e6b] text-base no-underline">Dr.Althea</a></li>
+                <li class="mb-2"><a href="brands/2.html" class="text-gray-800 hover:text-[#6b8e6b] text-base no-underline">TOCOBO</a></li>
             </ul>
           </div>
           <div class="mb-4">
             <a href="ingredients.html" class="text-xs font-bold text-gray-500 mb-2 hover:text-[#6b8e6b]">ინგრედიენტები</a>
             <ul>
                 <li class="mb-2"><a href="ingredients/1.html" class="text-gray-800 hover:text-[#6b8e6b] text-base no-underline">abc</a></li>
+                <li class="mb-2"><a href="ingredients/2.html" class="text-gray-800 hover:text-[#6b8e6b] text-base no-underline">კალამინი</a></li>
+                <li class="mb-2"><a href="ingredients/3.html" class="text-gray-800 hover:text-[#6b8e6b] text-base no-underline">ბენტონიტი</a></li>
+                <li class="mb-2"><a href="ingredients/4.html" class="text-gray-800 hover:text-[#6b8e6b] text-base no-underline">რბილ მცენარეული ზედაპირულად აქტიური ნივთიერებები</a></li>
             </ul>
           </div>
 
@@ -194,6 +199,9 @@
             <a href="categories/1.html" class="flex items-center py-2 px-3 text-[0.95rem] text-gray-700 rounded-md hover:text-[#6b8e6b] hover:bg-gray-50 transition-all no-underline">
               <span>ჰიდროფილური ზეთები &amp; ბალმები</span>
             </a>
+            <a href="categories/2.html" class="flex items-center py-2 px-3 text-[0.95rem] text-gray-700 rounded-md hover:text-[#6b8e6b] hover:bg-gray-50 transition-all no-underline">
+              <span>სახის დასაბანები &amp; ენზიმური პუდრები</span>
+            </a>
         </div>
       </div>
 
@@ -209,6 +217,9 @@
             <a href="brands/1.html" class="flex items-center py-2 px-3 text-[0.95rem] text-gray-700 rounded-md hover:text-[#6b8e6b] hover:bg-gray-50 transition-all no-underline">
               <span>Dr.Althea</span>
             </a>
+            <a href="brands/2.html" class="flex items-center py-2 px-3 text-[0.95rem] text-gray-700 rounded-md hover:text-[#6b8e6b] hover:bg-gray-50 transition-all no-underline">
+              <span>TOCOBO</span>
+            </a>
         </div>
       </div>
 
@@ -223,6 +234,15 @@
         <div class="menu-popup md:absolute md:left-0 md:z-20 md:mt-0 md:w-80 w-full md:bg-white md:shadow-lg md:border md:border-gray-100 md:border-t-2 md:border-t-gray-100 p-2 max-h-80 overflow-y-auto grid grid-cols-1 transition-all duration-200 ease-in-out" style="min-width: 0; border-radius: 0;">
             <a href="ingredients/1.html" class="flex items-center py-2 px-3 text-[0.95rem] text-gray-700 rounded-md hover:text-[#6b8e6b] hover:bg-gray-50 transition-all no-underline">
               <span>abc</span>
+            </a>
+            <a href="ingredients/2.html" class="flex items-center py-2 px-3 text-[0.95rem] text-gray-700 rounded-md hover:text-[#6b8e6b] hover:bg-gray-50 transition-all no-underline">
+              <span>კალამინი</span>
+            </a>
+            <a href="ingredients/3.html" class="flex items-center py-2 px-3 text-[0.95rem] text-gray-700 rounded-md hover:text-[#6b8e6b] hover:bg-gray-50 transition-all no-underline">
+              <span>ბენტონიტი</span>
+            </a>
+            <a href="ingredients/4.html" class="flex items-center py-2 px-3 text-[0.95rem] text-gray-700 rounded-md hover:text-[#6b8e6b] hover:bg-gray-50 transition-all no-underline">
+              <span>რბილ მცენარეული ზედაპირულად აქტიური ნივთიერებები</span>
             </a>
         </div>
       </div>
@@ -323,10 +343,106 @@
 <!-- END app/views/main/_product.html.erb -->
     </div>
   </section>
+  
+  <section class="mb-20" id="category-2">
+    <h2 class="category-title text-3xl md:text-4xl font-normal text-gray-900 mb-12 text-center relative pb-4">
+      სახის დასაბანები &amp; ენზიმური პუდრები
+    </h2>
+    <div>
+      <!-- BEGIN app/views/main/_product.html.erb
+-->
+<div class="mb-10 p-4 md:p-8 bg-white rounded-2xl shadow border border-gray-100 transition-all hover:shadow-lg">
+  <div class="mb-2 -mt-2 md:mb-4 md:-mt-4 flex items-center justify-between">
+    <span class="text-xs text-gray-400 select-all bg-white/80 px-2 py-0.5 rounded" title="ID продукта для поддержки">[ 000002 ]</span>
+  </div>
+  <div class="flex flex-col md:flex-row gap-6 md:gap-10 items-stretch">
+    <div class="relative w-full md:w-80 shrink-0 rounded-xl overflow-hidden bg-gray-50 flex items-center justify-center" style="min-height: 400px; max-height: 400px;">
+        <div class="relative w-full md:w-80 shrink-0 rounded-xl overflow-hidden bg-gray-50 flex items-center justify-center" style="min-height: 400px; max-height: 400px;">
+          <span class="text-gray-300 text-lg">Нет фото</span>
+        </div>
+    </div>
+
+    <div class="flex flex-col flex-grow w-full justify-between">
+
+      <h2 class="text-xl md:text-2xl font-semibold text-[#6b8e6b] mb-4 leading-snug tracking-tight">
+        <a class="hover:underline text-[#6b8e6b]" href="products/2.html">TOCOBO Coconut Clay დასაბანი ქაფი </a>
+      </h2>
+
+        <div class="mb-2 mt-2 text-sm">
+          <span class="font-bold text-gray-600">Brand:</span>
+          <a class="hover:underline text-[#6b8e6b] font-semibold" href="brands/2.html">TOCOBO</a>
+        </div>
+
+        <div class="mb-2 mt-2 text-sm">
+          <span class="font-bold text-gray-600">Ingredients:</span>
+          <br>
+          <a class="hover:underline text-[#6b8e6b] font-semibold" href="ingredients/2.html">კალამინი</a>
+          <br>
+          <a class="hover:underline text-[#6b8e6b] font-semibold" href="ingredients/3.html">ბენტონიტი</a>
+          <br>
+          <a class="hover:underline text-[#6b8e6b] font-semibold" href="ingredients/4.html">რბილ მცენარეული ზედაპირულად აქტიური ნივთიერებები</a>
+        </div>
+
+
+        <div class="mb-1 mt-2 text-sm">
+          <span class="font-bold text-gray-600">Description:</span>
+        </div>
+        <div class="prose prose-sm max-w-none mb-4 text-[0.97rem] text-gray-600 leading-relaxed">
+          <ul>
+<li>აშორებს ჭუჭყს და ზედმეტ ცხიმს</li>
+<li>ხელს უშლის ფორების დახშობას</li>
+<li>ახდენს ცხიმოვანი ჯირკვლების ფუნქციონირების ნორმალიზებას</li>
+<li>ეხმარება აკნეს წინააღმდეგ ბრძოლაში</li>
+</ul>
+<div><br></div>
+        </div>
+
+        <!-- Вариант 1: Яркий заголовок -->
+        <div class="pt-4 border-t border-gray-100 mt-auto">
+          <div class="mb-3">
+          </div>
+          <div class="flex flex-wrap gap-2 justify-start items-stretch sm:justify-start">
+              <div class="w-full flex justify-center sm:w-auto">
+                <!-- BEGIN app/views/main/_product_variant.html.erb
+-->  <div class="bg-white rounded-xl shadow border border-[#ffe066] flex flex-col group transition-all duration-300 ease-in-out hover:shadow-2xl hover:bg-[#fffbe6] relative mr-2 w-full sm:w-fit" style="min-width: 100px; height: auto; padding: 0.5rem;">
+  <div class="w-full flex justify-end items-end" style="height: 0; position: relative; top: 10px; right: -18px; z-index: 30;">
+    <span class="bg-[#ff3366] text-white text-[10px] font-bold shadow select-none rounded-full flex items-center justify-center" style="width: 36px; height: 36px; text-align: center; position: relative; z-index: 30; box-shadow: 0 2px 8px -2px #ff3366;">
+      -10%
+    </span>
+  </div>
+  <div class="flex items-center justify-center gap-1 w-full mb-0" style="flex-wrap: wrap; min-height: 40px; display: flex; align-items: center; justify-content: center;">
+    <h3 class="text-[14px] md:text-[15px] font-bold text-[#6b8e6b] leading-tight tracking-tight m-0 p-0 text-center mt-5" style="white-space: nowrap; display: flex; align-items: center; justify-content: center;">
+      150 მლ
+    </h3>
+  </div>
+  <div style="border-bottom: 0.5px solid #d1d5db; width: 100%; margin: 6px 0 6px 0;"></div>
+  <div class="flex flex-col items-center justify-center flex-1 mt-0 mb-0 w-full" style="min-height: 40px;">
+      <div class="flex items-end justify-center gap-1 md:gap-2 w-full">
+        <span class="text-lg md:text-xl font-bold text-black leading-tight">
+          34.0 ₾
+        </span>
+          <span class="text-sm md:text-base font-medium text-gray-400 line-through">
+            38.0 ₾
+          </span>
+      </div>
+  </div>
+</div>
+<!-- END app/views/main/_product_variant.html.erb -->
+              </div>
+          </div>
+        </div>
+    </div>
+  </div>
+
+</div>
+
+<!-- END app/views/main/_product.html.erb -->
+    </div>
+  </section>
 <!-- END app/views/main/products.html.erb --></main>
           <!-- BEGIN app/views/main/_footer.html.erb
 --><footer class="w-full text-center py-6 text-xs text-gray-400 mt-12">
-  © 2026 KBeautyGeo — v0
+  © 2026 KBeautyGeo — v20260120195526
 </footer>
 <!-- END app/views/main/_footer.html.erb -->
         </div>
