--- a/ka/ingredients/3.html
+++ b/ka/ingredients/3.html
@@ -171,8 +171,8 @@
   </div>
 
   <div class="flex items-center gap-1 bg-gray-50 p-0.5 rounded-md border border-gray-200">
-    <a class="lang-btn lang-btn-ka text-xs font-normal py-1 px-2.5 rounded border-none cursor-pointer transition-all bg-transparent text-gray-500" href="../../ka/index.html">ქართ</a>
-    <a class="lang-btn lang-btn-en text-xs font-normal py-1 px-2.5 rounded border-none cursor-pointer transition-all active" href="../../en/index.html">ENG</a>
+    <a class="lang-btn lang-btn-ka text-xs font-normal py-1 px-2.5 rounded border-none cursor-pointer transition-all active" href="../../ka/index.html">ქართ</a>
+    <a class="lang-btn lang-btn-en text-xs font-normal py-1 px-2.5 rounded border-none cursor-pointer transition-all bg-transparent text-gray-500" href="../../en/index.html">ENG</a>
   </div>
 
 
@@ -200,7 +200,7 @@
               <span>ჰიდროფილური ზეთები &amp; ბალმები</span>
             </a>
             <a href="../categories/2.html" class="flex items-center py-2 px-3 text-[0.95rem] text-gray-700 rounded-md hover:text-[#6b8e6b] hover:bg-gray-50 transition-all no-underline">
-              <span>Face Wash &amp; Enzyme Powders</span>
+              <span>სახის დასაბანები &amp; ენზიმური პუდრები</span>
             </a>
         </div>
       </div>
@@ -236,13 +236,13 @@
               <span>abc</span>
             </a>
             <a href="../ingredients/2.html" class="flex items-center py-2 px-3 text-[0.95rem] text-gray-700 rounded-md hover:text-[#6b8e6b] hover:bg-gray-50 transition-all no-underline">
-              <span>Calamine</span>
+              <span>კალამინი</span>
             </a>
             <a href="../ingredients/3.html" class="flex items-center py-2 px-3 text-[0.95rem] text-gray-700 rounded-md hover:text-[#6b8e6b] hover:bg-gray-50 transition-all no-underline">
-              <span>Bentonite</span>
+              <span>ბენტონიტი</span>
             </a>
             <a href="../ingredients/4.html" class="flex items-center py-2 px-3 text-[0.95rem] text-gray-700 rounded-md hover:text-[#6b8e6b] hover:bg-gray-50 transition-all no-underline">
-              <span>Mild plant surfactants.</span>
+              <span>რბილ მცენარეული ზედაპირულად აქტიური ნივთიერებები</span>
             </a>
         </div>
       </div>
@@ -255,8 +255,14 @@
 <!-- END app/views/main/_menu.html.erb -->
           </nav>
 
-          <main><!-- BEGIN app/views/products/show.html.erb
---><!-- BEGIN app/views/main/_product.html.erb
+          <main><!-- BEGIN app/views/main/products.html.erb
+-->  
+  <section class="mb-20" id="category-3">
+    <h2 class="category-title text-3xl md:text-4xl font-normal text-gray-900 mb-12 text-center relative pb-4">
+      ბენტონიტი
+    </h2>
+    <div>
+      <!-- BEGIN app/views/main/_product.html.erb
 -->
 <div class="mb-10 p-4 md:p-8 bg-white rounded-2xl shadow border border-gray-100 transition-all hover:shadow-lg">
   <div class="mb-2 -mt-2 md:mb-4 md:-mt-4 flex items-center justify-between">
@@ -272,7 +278,7 @@
     <div class="flex flex-col flex-grow w-full justify-between">
 
       <h2 class="text-xl md:text-2xl font-semibold text-[#6b8e6b] mb-4 leading-snug tracking-tight">
-        <a class="hover:underline text-[#6b8e6b]" href="../products/2.html">TOCOBO Coconut Clay Cleansing Foam </a>
+        <a class="hover:underline text-[#6b8e6b]" href="../products/2.html">TOCOBO Coconut Clay დასაბანი ქაფი </a>
       </h2>
 
         <div class="mb-2 mt-2 text-sm">
@@ -283,11 +289,11 @@
         <div class="mb-2 mt-2 text-sm">
           <span class="font-bold text-gray-600">Ingredients:</span>
           <br>
-          <a class="hover:underline text-[#6b8e6b] font-semibold" href="../ingredients/2.html">Calamine</a>
+          <a class="hover:underline text-[#6b8e6b] font-semibold" href="../ingredients/2.html">კალამინი</a>
           <br>
-          <a class="hover:underline text-[#6b8e6b] font-semibold" href="../ingredients/3.html">Bentonite</a>
+          <a class="hover:underline text-[#6b8e6b] font-semibold" href="../ingredients/3.html">ბენტონიტი</a>
           <br>
-          <a class="hover:underline text-[#6b8e6b] font-semibold" href="../ingredients/4.html">Mild plant surfactants.</a>
+          <a class="hover:underline text-[#6b8e6b] font-semibold" href="../ingredients/4.html">რბილ მცენარეული ზედაპირულად აქტიური ნივთიერებები</a>
         </div>
 
 
@@ -296,10 +302,10 @@
         </div>
         <div class="prose prose-sm max-w-none mb-4 text-[0.97rem] text-gray-600 leading-relaxed">
           <ul>
-<li>Removes dirt and excess oil</li>
-<li>Prevents clogged pores</li>
-<li>Normalizes the functioning of the sebaceous glands</li>
-<li>Helps fight acne</li>
+<li>აშორებს ჭუჭყს და ზედმეტ ცხიმს</li>
+<li>ხელს უშლის ფორების დახშობას</li>
+<li>ახდენს ცხიმოვანი ჯირკვლების ფუნქციონირების ნორმალიზებას</li>
+<li>ეხმარება აკნეს წინააღმდეგ ბრძოლაში</li>
 </ul>
 <div><br></div>
         </div>
@@ -319,7 +325,7 @@
   </div>
   <div class="flex items-center justify-center gap-1 w-full mb-0" style="flex-wrap: wrap; min-height: 40px; display: flex; align-items: center; justify-content: center;">
     <h3 class="text-[14px] md:text-[15px] font-bold text-[#6b8e6b] leading-tight tracking-tight m-0 p-0 text-center mt-5" style="white-space: nowrap; display: flex; align-items: center; justify-content: center;">
-       150 ml
+      150 მლ
     </h3>
   </div>
   <div style="border-bottom: 0.5px solid #d1d5db; width: 100%; margin: 6px 0 6px 0;"></div>
@@ -344,7 +350,9 @@
 </div>
 
 <!-- END app/views/main/_product.html.erb -->
-<!-- END app/views/products/show.html.erb --></main>
+    </div>
+  </section>
+<!-- END app/views/main/products.html.erb --></main>
           <!-- BEGIN app/views/main/_footer.html.erb
 --><footer class="w-full text-center py-6 text-xs text-gray-400 mt-12">
   © 2026 KBeautyGeo — v20260120195526
