--- a/ka/products/1.html
+++ b/ka/products/1.html
@@ -146,18 +146,23 @@
             <a href="../categories.html" class="text-xs font-bold text-gray-500 mb-2 hover:text-[#6b8e6b]">კატეგორიები</a>
             <ul>
                 <li class="mb-2"><a href="../categories/1.html" class="text-gray-800 hover:text-[#6b8e6b] text-base no-underline">📦 ჰიდროფილური ზეთები &amp; ბალმები</a></li>
+                <li class="mb-2"><a href="../categories/2.html" class="text-gray-800 hover:text-[#6b8e6b] text-base no-underline">📦 სახის დასაბანები &amp; ენზიმური პუდრები</a></li>
             </ul>
           </div>
           <div class="mb-4">
             <a href="../brands.html" class="text-xs font-bold text-gray-500 mb-2 hover:text-[#6b8e6b]">ბრენდები</a>
             <ul>
                 <li class="mb-2"><a href="../brands/1.html" class="text-gray-800 hover:text-[#6b8e6b] text-base no-underline">Dr.Althea</a></li>
+                <li class="mb-2"><a href="../brands/2.html" class="text-gray-800 hover:text-[#6b8e6b] text-base no-underline">TOCOBO</a></li>
             </ul>
           </div>
           <div class="mb-4">
             <a href="../ingredients.html" class="text-xs font-bold text-gray-500 mb-2 hover:text-[#6b8e6b]">ინგრედიენტები</a>
             <ul>
                 <li class="mb-2"><a href="../ingredients/1.html" class="text-gray-800 hover:text-[#6b8e6b] text-base no-underline">abc</a></li>
+                <li class="mb-2"><a href="../ingredients/2.html" class="text-gray-800 hover:text-[#6b8e6b] text-base no-underline">კალამინი</a></li>
+                <li class="mb-2"><a href="../ingredients/3.html" class="text-gray-800 hover:text-[#6b8e6b] text-base no-underline">ბენტონიტი</a></li>
+                <li class="mb-2"><a href="../ingredients/4.html" class="text-gray-800 hover:text-[#6b8e6b] text-base no-underline">რბილ მცენარეული ზედაპირულად აქტიური ნივთიერებები</a></li>
             </ul>
           </div>
 
@@ -194,6 +199,9 @@
             <a href="../categories/1.html" class="flex items-center py-2 px-3 text-[0.95rem] text-gray-700 rounded-md hover:text-[#6b8e6b] hover:bg-gray-50 transition-all no-underline">
               <span>ჰიდროფილური ზეთები &amp; ბალმები</span>
             </a>
+            <a href="../categories/2.html" class="flex items-center py-2 px-3 text-[0.95rem] text-gray-700 rounded-md hover:text-[#6b8e6b] hover:bg-gray-50 transition-all no-underline">
+              <span>სახის დასაბანები &amp; ენზიმური პუდრები</span>
+            </a>
         </div>
       </div>
 
@@ -209,6 +217,9 @@
             <a href="../brands/1.html" class="flex items-center py-2 px-3 text-[0.95rem] text-gray-700 rounded-md hover:text-[#6b8e6b] hover:bg-gray-50 transition-all no-underline">
               <span>Dr.Althea</span>
             </a>
+            <a href="../brands/2.html" class="flex items-center py-2 px-3 text-[0.95rem] text-gray-700 rounded-md hover:text-[#6b8e6b] hover:bg-gray-50 transition-all no-underline">
+              <span>TOCOBO</span>
+            </a>
         </div>
       </div>
 
@@ -223,6 +234,15 @@
         <div class="menu-popup md:absolute md:left-0 md:z-20 md:mt-0 md:w-80 w-full md:bg-white md:shadow-lg md:border md:border-gray-100 md:border-t-2 md:border-t-gray-100 p-2 max-h-80 overflow-y-auto grid grid-cols-1 transition-all duration-200 ease-in-out" style="min-width: 0; border-radius: 0;">
             <a href="../ingredients/1.html" class="flex items-center py-2 px-3 text-[0.95rem] text-gray-700 rounded-md hover:text-[#6b8e6b] hover:bg-gray-50 transition-all no-underline">
               <span>abc</span>
+            </a>
+            <a href="../ingredients/2.html" class="flex items-center py-2 px-3 text-[0.95rem] text-gray-700 rounded-md hover:text-[#6b8e6b] hover:bg-gray-50 transition-all no-underline">
+              <span>კალამინი</span>
+            </a>
+            <a href="../ingredients/3.html" class="flex items-center py-2 px-3 text-[0.95rem] text-gray-700 rounded-md hover:text-[#6b8e6b] hover:bg-gray-50 transition-all no-underline">
+              <span>ბენტონიტი</span>
+            </a>
+            <a href="../ingredients/4.html" class="flex items-center py-2 px-3 text-[0.95rem] text-gray-700 rounded-md hover:text-[#6b8e6b] hover:bg-gray-50 transition-all no-underline">
+              <span>რბილ მცენარეული ზედაპირულად აქტიური ნივთიერებები</span>
             </a>
         </div>
       </div>
@@ -318,7 +338,7 @@
 <!-- END app/views/products/show.html.erb --></main>
           <!-- BEGIN app/views/main/_footer.html.erb
 --><footer class="w-full text-center py-6 text-xs text-gray-400 mt-12">
-  © 2026 KBeautyGeo — v0
+  © 2026 KBeautyGeo — v20260120195526
 </footer>
 <!-- END app/views/main/_footer.html.erb -->
         </div>
